--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,35 +3,35 @@
 version: 2.1
 
 # 使用 orbs 实现定义服用？
-orbs:
-  node: circleci/node@4.7.0
+#orbs:
+#  node: circleci/node@4.7.0
 
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  bulid:
-    executor: 
-      name: node/default
-      tag: '10.4'
-    steps:
-      - checkout
-      - node/with-cache:
-        steps:
-          - run: npm install
-      - run: npm run test    
-  #say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-  #  docker:
-  #    - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  # bulid:
+  #  executor: 
+  #    name: node/default
+  #    tag: '10.4'
   #  steps:
   #    - checkout
-  #    - run:
-  #        name: "Say hello"
-  #        command: "echo Hello, World!"      
+  #    - node/with-cache:
+  #      steps:
+  #        - run: npm install
+  #    - run: npm run test    
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"      
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
